test/mutation_analysis/s0033_search_in_rotated_sorted_array/hafis/starchat/mutants/6/result.txt
./test/mutation_analysis/s0033_search_in_rotated_sorted_array/hafis/starchat/mutants/6/Solution.java:47: error: unreachable statement
        return -1;
        ^
1 error
